welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:12: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if(c=d){
            ^